--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </h2>
               <div class='level'>
                 <div class='level-left'>
-                  <a class='button social-button level-item github' href='https://github.com/ohlookitsveld target='_blank'>
+                  <a class='button social-button level-item github' href='https://github.com/ohlookitsveld' target='_blank'>
                     <i class='fab fa-2x fa-github'></i>
                   </a>
                   <a class='button social-button level-item twitter' href='https://twitter.com/ohlookitsveld' target='_blank'>
